# ssr-performance-showdown

./: README.md  graph.html  package-lock.json  package.json  template.html
angular/: angular.json  package.json  pnpm-lock.yaml  server.ts
angular/src/: index.html
datastar-go/: .gitattributes  .gitignore  README.md  Taskfile.yml  go.mod  go.sum  page.templ  page_templ.go  web.go
datastar-go/static/: datastar.js
dioxus/: Cargo.toml  README.md  index.html
dioxus/.cargo/: config.toml
dioxus/src/: main.rs
ejs/: package.json  pnpm-lock.yaml  server.js
ejs/client/: index.ejs  spiral.ejs
fastify-html/: package.json  pnpm-lock.yaml  server.js
fastify-html/client/: index.js
fastify-htmx/: package.json  pnpm-lock.yaml
fastify-htmx/client/: index.html
leptos/: Cargo.toml
leptos/src/: main.rs
marko/: package.json  pnpm-lock.yaml  server.js  vite.config.js
marko/src/: index.js  template.marko
preact/: .eslintrc.yml  package.json  pnpm-lock.yaml  server.js  server.test.js  vite.config.js
preact/client/: base.jsx  index.html  mount.js
react/: package.json  pnpm-lock.yaml  server.js  vite.config.js
react-with-cheating/: package.json  server.js
react-with-cheating/client/: base.jsx
react/client/: base.jsx
riot/: .eslintrc.yml  package-lock.json  package.json  pnpm-lock.yaml  server.js  vite.config.js
riot/client/: index.js  mount.js  page.riot
solid/: package.json  pnpm-lock.yaml  server.js
svelte/: package.json  pnpm-lock.yaml  server.js
uhtml/: package.json  server.js  vite.config.js
vue/: package.json  pnpm-lock.yaml  server.js
(+17 files in other folders)
